syntax = "proto3";
package kratos.api;

option go_package = "realworld/app/user/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
  string svr_name = 3;
  google.protobuf.Duration jwt_interval = 4;
}
//"root:root@tcp(127.0.0.1:3306)/realworld?charset=utf8mb4&parseTime=True&loc=Local"
message Data {
  message Database {
    string driver = 1;
    string user = 2;
    string passwd = 3;
    string host = 4;
    string db_name = 5;
    int32 port = 6;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  message ETCD {
    repeated string addr = 1;
  }
  message ES {
    string host = 1;
    int32 port = 2;
  }
  Database database = 1;
  Redis redis = 2;
  ETCD etcd = 3;
  string rsa_private = 4;
  string rsa_public = 5;
  ES es_info = 6;
}
